--- a/static/styles/night_mode.css
+++ b/static/styles/night_mode.css
@@ -171,7 +171,7 @@ body.night-mode {
     }
 
     /* do not turn the .message_header .stream_label text dark on hover because they're
-on a dark background, and don't change the dark labels dark either. */
+       on a dark background, and don't change the dark labels dark either. */
     .message_header:not(.dark_background)
         a.stream_label:not(.dark_background):hover {
         color: hsl(212, 28%, 18%);
@@ -1068,8 +1068,13 @@ on a dark background, and don't change the dark labels dark either. */
         }
     }
 
-    a:not(:active):focus {
-        outline-color: hsl(0, 0%, 100%);
+    a:not(:active):focus,
+    button:focus,
+    .new-style label.checkbox input[type="checkbox"]:focus ~ span,
+    i.fa:focus,
+    i.zulip-icon:focus,
+    .auto-select:focus {
+        outline-color: hsl(0, 0%, 67%);
     }
 }
 
